--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+:root {
+  --line-empty-border: #c6c6c6;
+  --line-color-border: #3498db; }
+
 * {
   margin: 0;
   padding: 0; }
@@ -34,6 +38,18 @@ body {
   max-width: 100%;
   position: relative; }
 
+.circle {
+  background-color: #74f17c;
+  height: 3rem;
+  width: 3rem;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 3px solid var(--line-empty-border); }
+  .circle-active {
+    border-color: #3498db; }
+
 .progress-container::before {
   content: "";
   background-color: #e0e0e0;
@@ -53,3 +69,23 @@ body {
   left: 0;
   z-index: -1;
   transition: all 0.4s ease; }
+
+.btn {
+  background-color: var(--line-color-border);
+  border-radius: 6px;
+  padding: 0.8rem 3rem;
+  margin: 0.5rem;
+  border: 0;
+  font-size: 1.4rem;
+  color: white;
+  cursor: pointer; }
+
+.btn:active {
+  transform: scale(0.98); }
+
+.btn:focus {
+  outline: 0; }
+
+.btn-disable {
+  background-color: var(--line-empty-border);
+  cursor: not-allowed; }
